= Release History

== 2.0.3 / 2011-05-01 Charlie Savage

* The biggest change in this release is supporting the use of libxml-ruby in
  native background Ruby threads.  Previously, the use of libxml-ruby in
  background threads in Ruby 1.9.x and higher would often cause
  segmentation faults.  This has now been fixed (Charlie Savage).

* Add check to verify a node has not been deleted.  This can happen when
  a ruby variable holds a reference to a child node that gets freed
  when its parent gets freed.  Previously when this happened a
  segmentation fault would occur, now an exception is raised (Charlie Savage, fixes
  RubyForge #26839.

* Do not unlink nodes before internal validations have run - avoids
  segmentation faults caused by freeing a node twice (Charlie Savage).

* Add support for Document#canonicalization (Victor Lin).

* Fix memory leak in Reader#lookup_namespace (Charlie Savage).

* Fix memory leak in Reader#[] (Nathan Kriege).

* Fix usage of @io instance variable (Jeffrey Taylor)

* Removed old sax error handling code that has been fixed in newer
  versions of libxml (Charlie Savage).

* Code cleanup - remove unused variables and commented out code (Charlie Savage)

* Minor text changes and documentation fixes (Charlie Savage).

* Fix documentation error (fixes RubyForge #26888).

* Update documentation for Document#validation* methods (fixes RubyForge #24833).

* Update documentation and test (fixes Ruby Forge Issue #28770).

* Updated documentation in README (Anurag Priyam):
1. rake doc does not work; use rake rdoc.
2. gem mislav-hanna does not exist; use hanna.
3. rake rdoc 'depends' on hanna; no need of RDOCOPTS
4. Point to the github issue tracker instead of Ruby Forge
5. Point to the github (gh-pages) site for docs

* Add tc_error to test suite (Charlie Savage).

* Add sax test (Stanislav O.Pogrebnyak).

== 2.0.2 / 2011-04-17 Charlie Savage

* Added binaries for windows (Charlie Savage).
