@@ -186,7 +186,7 @@ static VALUE rxml_attr_name_get(VALUE self)
   if (xattr->name == NULL)
     return Qnil;
   else
-    return rxml_str_new2((const char*) xattr->name, xattr->doc->encoding);
+    return rxml_str_new2((const char*) xattr->name, (xattr->doc ? xattr->doc->encoding : NULL));
 }
 
 /*
@@ -302,7 +302,7 @@ VALUE rxml_attr_value_get(VALUE self)
 
   if (value != NULL)
   {
-    result = rxml_str_new2((const char*) value, xattr->doc->encoding);
+    result = rxml_str_new2((const char*) value, (xattr->doc ? xattr->doc->encoding : NULL));
     xmlFree(value);
   }
   return result;
